// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game initially renders only screenshot information 1`] = `
<DocumentFragment>
  <div>
    <a
      href="https://www.retrogames.cz/play_037-SegaMS.php"
      rel="noreferrer"
      target="_blank"
    >
      <img
        alt="Golden Axe"
        data-testid="game-screenshot"
        src="/img/SMS-Golden_Axe.png"
      />
    </a>
  </div>
</DocumentFragment>
`;

exports[`Game renders all game information 1`] = `
<DocumentFragment>
  <div>
    <h2>
      Golden Axe
    </h2>
    <h3>
       - SMS
    </h3>
    <a
      href="https://www.retrogames.cz/play_037-SegaMS.php"
      rel="noreferrer"
      target="_blank"
    >
      <img
        alt="Golden Axe"
        data-testid="game-screenshot"
        src="/img/SMS-Golden_Axe.png"
      />
    </a>
  </div>
</DocumentFragment>
`;
